--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   },
   "devDependencies": {
     "@types/node": "^18",
-    "nuxt": "^3.5.1"
+    "nuxt": "^3.5.1",
+    "tailwindcss": "^3.3.2"
   },
   "dependencies": {
-    "bootstrap": "^5.2.3"
+    "@headlessui/vue": "^1.7.13",
+    "@heroicons/vue": "^2.0.18",
+    "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.5"
   }
 }
